fix description text-align

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -117,6 +117,7 @@ form {
 
 .desc {
   font-size: 0.95rem;
+  text-align: left;
 }
 
 .book--container {
